# visual-asset-management-system

./: .gitignore
backend/backend/handlers/assets/: streamAsset.py
backend/backend/handlers/workflows/: createWorkflow.py
documentation/permissionsTemplates/: database-readonly.json  deny-tagged-assets.json  global-readonly.json
infra/: cdk.context.json  package-lock.json
infra/config/: config.json
infra/config/csp/: cspAdditionalConfig.json
scripts/: create_group.sh
tools/PiartCLI/: README.md  pyproject.toml
tools/PiartCLI/piart/: __init__.py  __main__.py  install_bundled.py  main.py
tools/PiartCLI/piart/bundled/: vamscli-2.5.0-py3-none-any.whl
tools/VamsCLI/vamscli/commands/: auth.py
web/: README.md
web/customInstalls/babylonjs/: package-lock.json
web/customInstalls/playcanvas/: package-lock.json
web/customInstalls/threejs/: package-lock.json
web/public/: index.html  piart-0.1.0-py3-none-any.whl  piart-0.1.1-py3-none-any.whl  piart-0.1.2-py3-none-any.whl  piart-0.1.3-py3-none-any.whl  piart.whl  vamscli-2.5.0-py3-none-any.whl
web/src/: config.json  config.ts  synonyms.tsx
web/src/FedAuth/: Auth.tsx
web/src/authenticator/: SignInHeader.js
web/src/components/asset/: AssetDetailsPane.tsx  TabbedContainer.tsx  ViewAsset.tsx
web/src/components/common/: CodeBlock.tsx
web/src/components/createupdate/: UpdateAsset.tsx
web/src/components/filemanager/: EnhancedFileManager.tsx
web/src/layout/: Navigation.js
web/src/pages/: AssetDownload.tsx  Databases.js  LandingPage.js  ListPage.js
web/src/services/: AssetVersionService.js
(+37 files in other folders)
