[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piart"
version = "0.1.3"
description = "Wrapper CLI for VamsCLI that exposes repo/repos terminology"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0"
]

[project.scripts]
piart = "piart.main:main"

[tool.setuptools.packages.find]
include = ["piart*"]

[tool.setuptools.package-data]
piart = ["bundled/*.whl"]
